--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>
         Composite Calendar
     </title>
+    <script data-ad-client="ca-pub-6072864324011313" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
